deploy.yaml

apiVersion: v1
kind: Service
metadata:
  name: abc-svc
  labeels:
    app: 123-app
spec:
  ports:
    - port: 80
      targetport: 80
      protocol: TCP
  type: NodePort
  selector:
    app: 123-app
