ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  labels:
    app: myingress
spec:
  ingressClassname: nginx
  rules:
  - host: -------------------😘😘😘
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: my-app
            port:
              number: 80
  # - host: mobile.af049ffa178f7428aa19c4548441ee9f-1118725864.ap-southeast-1.elb.amazonaws.com
  #   http:
  #     paths:
  #     - pathType: Prefix
  #       path: "/"
  #       backend:
  #         service:
  #           name: cbzapp
  #           port: 
  #             number: 80
      - pathType: Prefix
        path: "/mobile"
        backend:
          service:
            name: cbzapp
            port: 
              number: 80
     # - pathType: Prefix
      #   path: "/laptop"
      #   backend:
      #     service:
      #       name: mylaptop
      #       port: 
      #         number: 80
